Table users {
  id          int         [pk, increment] // Primary key, auto-increment
  username    varchar(50) [unique, not null]
  email       varchar(100) [unique, not null]
  password    varchar(255) [not null]
  full_name   varchar(100)
  bio         text
  is_verified boolean     [default: false]
  is_premium  boolean     [default: false]
  created_at  timestamp   [default: `current_timestamp`]
  updated_at  timestamp   [default: `current_timestamp`]
}

Table posts {
  id          int         [pk, increment] // Primary key, auto-increment
  user_id     int         [ref: > users.id, not null] // Foreign key referencing users
  description text
  created_at  timestamp   [default: `current_timestamp`]
  updated_at  timestamp   [default: `current_timestamp`]
}

Table media {
  id          int         [pk, increment] // Primary key, auto-increment
  post_id     int         [ref: > posts.id, not null] // Foreign key referencing posts
  media_url   varchar(255) [not null]
  media_type  varchar(50)  [not null] // e.g., 'photo' or 'video'
  caption     text        [not null]
  created_at  timestamp   [default: `current_timestamp`]
}

Table likes {
  id          int         [pk, increment] // Primary key, auto-increment
  user_id     int         [ref: > users.id, not null] // Foreign
  post_id     int         [ref: > posts.id, not null] // Foreign key referencing posts
  created_at  timestamp   [default: `current_timestamp`]
}

Table followers {
  id          int         [pk, increment] // Primary key, auto-increment
  user_id     int         [ref: > users.id, not null] // The user who is following
  follower_id int         [ref: > users.id, not null] // The user being followed
  created_at  timestamp   [default: `current_timestamp`]
}

